Complete WA-Gateway project setup with all features

--- a/env.example
+++ b/env.example
@@ -1,7 +1,7 @@
 # === SERVER CONFIGURATION ===
 PORT=3000
 WS_PORT=3001
-API_TOKEN=your-secret-api-token
+API_TOKEN=test123
 ADMIN_TOKEN=your-secret-admin-token
 ENVIRONMENT=development
 
@@ -9,12 +9,16 @@ ENVIRONMENT=development
 DB_HOST=localhost
 DB_PORT=8889
 DB_DATABASE=db_wa
-DB_USERNAME=root
-DB_PASSWORD=mha2se92
+DB_USERNAME=user1
+DB_PASSWORD=
 
 # === DATABASE OPTIONS ===
 SAVE_MESSAGES=true
 SAVE_CONTACTS=true
+
+# === WARMER SYSTEM ===
+WARMER_ENABLED=false
+WARMER_AUTO_START_CAMPAIGNS=false
 
 # === STORAGE PATHS ===
 WHATSAPP_STORE_PATH=./whatsapp-store
@@ -25,7 +29,7 @@ FILE_AUTO_CLEANUP=true
 FILE_CLEANUP_INTERVAL=daily
 
 # === AI PROVIDER API KEYS ===
-OPENAI_API_KEY=
+OPENAI_API_KEY=your-openai-api-key-here
 DEEPSEEK_API_KEY=
 ANTHROPIC_API_KEY=
 GEMINI_API_KEY=
@@ -73,10 +77,6 @@ AI_RATE_LIMIT_WINDOW=60000
 # === WEBHOOKS (Optional) ===
 WEBHOOK_URL=
 WEBHOOK_EVENTS=message,connection,qr
-
-# === WARMER SYSTEM ===
-WARMER_ENABLED=true
-WARMER_AUTO_START_CAMPAIGNS=true
 
 # === SECURITY ===
 AI_KEYS_ENCRYPTION_KEY=change-this-to-a-secure-32-character-key     
