--- a/package.json
+++ b/package.json
@@ -28,12 +28,14 @@
   "license": "ISC",
   "dependencies": {
     "@whiskeysockets/baileys": "7.0.0-rc.9",
-    "axios": "^1.6.7",
+    "axios": "^1.13.2",
+    "bcryptjs": "^3.0.3",
     "cors": "^2.8.5",
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
     "express-rate-limit": "^6.7.0",
     "helmet": "^7.0.0",
+    "jsonwebtoken": "^9.0.3",
     "multer": "^2.0.0",
     "mysql2": "^3.6.5",
     "node-cron": "^4.0.7",
